--- a/src/assets/styles/blocks/skills.scss
+++ b/src/assets/styles/blocks/skills.scss
@@ -1,5 +1,5 @@
 .skills {
-	color: $text-color;
+	color: #81aa70;
 }
 .skills-row__title {
 	text-align: left;
@@ -44,7 +44,7 @@
 }
 
 .skill__circle_above {
-	stroke: $green;
+	stroke: #81aa70;
 	stroke-dasharray: 251;
 	stroke-dashoffset: 50;
 	transition: stroke-dasharray 1s ease;
@@ -56,7 +56,7 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	color: $green;
+	color: #81aa70;
 	font-size: 13px;
 	font-weight: 500;
 	text-align: center;
