--- a/src/assets/styles/blocks/welcome.scss
+++ b/src/assets/styles/blocks/welcome.scss
@@ -9,5 +9,13 @@
 	border-radius: 5px;
 	background-color: rgba(#122620, .6);
 
+}
 
+.center-block{
+	margin-left: 560px;
+	margin-top: 80px;
+}
+
+.welcome__social{
+	text-align: center;
 }
