--- a/src/assets/styles/blocks/button.scss
+++ b/src/assets/styles/blocks/button.scss
@@ -17,6 +17,7 @@
 	background-color: transparent;
 	border: 1px solid white;
 	border-radius: 22px;
+	text-align: right; 
 	&:hover {
 		border-color: #487f39;
 	}
