--- a/src/assets/styles/blocks/user.scss
+++ b/src/assets/styles/blocks/user.scss
@@ -6,11 +6,11 @@
 
 .user__photo {
 	height: 120px;
-	width: 101px;
+	width: 120px;
 	margin: 0 auto 15px;
 	border-radius: 50%;
 	background-repeat: no-repeat;
-	background-position: top center;
+	background-position: center;
 	-webkit-background-size: cover;
 	background-size: cover;
 }
