--- a/src/assets/styles/layout/base.scss
+++ b/src/assets/styles/layout/base.scss
@@ -3,7 +3,7 @@ body, html {
 }
 
 body {
-  font-family: 'Sansus';
+  font-family: 'Roboto';
   font-size: 16px;
   line-height: 1.42;
   color: $text-color;
@@ -20,7 +20,7 @@ body {
 
 .container {
   margin: 0 auto;
-  width: 95%;
+  width: 100%;
 }
 
 button {
@@ -53,10 +53,9 @@ a {
 }
 
 .main-section {
-  height: 680px;
+  height: 730px;
   background-image: url('./assets/images/forest.jpg');
   background-position: center;
   background-repeat: no-repeat;
-  -webkit-background-size: cover;
   background-size: cover;
 }
